--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.buttonbox {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10vh;
+  margin-top: 5vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.searchbarbox {
+  display: flex;
+  justify-content: center;
+}
+
+.catpic {
+  max-width: 50vw;
+  max-height: 80vh;
+  box-shadow: 10px 5px 7px 2px rgba(0, 0, 0, 0.39);
+}
+
+.picbox {
+  display: flex;
+  justify-content: center;
+}
+
+.catname {
+  max-width: 50vw;
+  box-shadow: 10px 5px 7px 2px rgba(0, 0, 0, 0.288);
+  padding: 10px;
+  font-size: 2em;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.namebox {
+  display: flex;
+  justify-content: center;
+}
+
+.loading {
+  display: inline;
+  padding: 5px;
+}
+
+.loading p {
+  display: flex;
+  justify-content: center;
+}
+
+span {
+  align-self: top;
+}
+
+.infooter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footerbox {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 10px 0px 10px 0px;
+  border-top: 1px solid #E0E0E0;
 }
